--- a/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/3.connect-to-an-oceanbase-tenant-by-using-obclient-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/3.connect-to-an-oceanbase-tenant-by-using-obclient-of-mysql-mode.md
@@ -118,6 +118,6 @@ obclient> exit
 Bye
 ```
 
-## Related topics
+## More information
 
 For information about how to connect to an Oracle tenant of OceanBase Database by using OBClient, see [Connect to an OceanBase Database tenant by using OBClient](../../2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/2.connect-to-an-oceanbase-tenant-by-using-obclient-of-oracle-mode.md). 
