--- a/en-US/3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/1.create-a-database-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/1.create-a-database-of-mysql-mode.md
@@ -92,6 +92,6 @@ obclient [test]> SHOW CREATE DATABASE test4;
 1 row in set
 ```
 
-## Related topics
+## More information
 
 * [Create a table](3.create-a-table-of-mysql-mode.md)
