--- a/en-US/3.develop/1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/2.update-data.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/2.update-data.md
@@ -167,7 +167,7 @@ obclient [test]> SELECT * FROM t_insert;
 
 In this example, `ON DUPLICATE KEY UPDATE name = VALUES(name)` specifies that when the inserted data is duplicate with a value of the primary key column, the value of the `name` column of the conflicting row `(3,'EN', 10003)` in the original data is updated to the value of the `name` column of the data to be inserted. 
 
-## Related topics
+## More information
 
 * [Insert data](1.insert-data.md)
 
