--- a/en-US/3.develop/1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/3.delete-data.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/3.delete-data.md
@@ -89,7 +89,7 @@ obclient [test]> TRUNCATE TABLE t_insert;
 
 For more information about the `TRUNCATE TABLE` statement, see [TRUNCATE TABLE](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/89.truncate-table-of-mysql-mode.md). 
 
-## Related topics
+## More information
 
 * [Insert data](1.insert-data.md)
 
