--- a/en-US/3.develop/1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/4.replace-data.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/4.replace-data.md
@@ -171,7 +171,7 @@ obclient [test]> SELECT * FROM t_replace;
 
 In this example, the `id` column in the `t_replace` table is the primary key column and must meet the UNIQUE constraint. The inserted record `(2,'EN',2002,current_timestamp ())` violates the UNIQUE constraint. Therefore, the system deletes the original record `(2,'US',2002,current_timestamp ())` and inserts the new record `(2,'EN',2002,current_timestamp ())`. 
 
-## Related topics
+## More information
 
 * [Insert data](1.insert-data.md)
 
