--- a/en-US/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/7.multi-table-join-query-of-mysql-mode/1.inner-join-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/7.multi-table-join-query-of-mysql-mode/1.inner-join-of-mysql-mode.md
@@ -147,7 +147,7 @@ obclient> SELECT tbl1.id, tbl1.name, tbl2.id, tbl2.name FROM tbl1 INNER JOIN tbl
 2 rows in set
 ```
 
-## Related topics
+## More information
 
 * [FULL JOIN queries](2.full-join-of-mysql-mode.md)
 
