--- a/en-US/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/7.multi-table-join-query-of-mysql-mode/4.right-join-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/7.multi-table-join-query-of-mysql-mode/4.right-join-of-mysql-mode.md
@@ -121,7 +121,7 @@ obclient> SELECT * FROM tbl_a RIGHT JOIN tbl_b ON tbl_a.id=tbl_b.number WHERE tb
 1 row in set
 ```
 
-## Related topics
+## More information
 
 * [INNER JOIN queries](1.inner-join-of-mysql-mode.md)
 
