--- a/en-US/3.develop/1.application-development-of-mysql-mode/5.transaction-management-of-mysql-mode/1.transaction-management-overview-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/5.transaction-management-of-mysql-mode/1.transaction-management-overview-of-mysql-mode.md
@@ -36,7 +36,7 @@ In the CLI environment of `obclient`, you can execute a transaction control stat
     <p>If the <code>autocommit</code> variable of a session is set to <code>0</code> and no transaction is to be explicitly committed, when the program terminates abnormally, OceanBase Database automatically rolls back the last uncommitted transaction. </p>
   </main>
 
-## Related topics
+## More information
 
 * [Start a transaction](2.start-a-transaction-of-mysql-mode.md)
 
