--- a/en-US/3.develop/1.application-development-of-mysql-mode/5.transaction-management-of-mysql-mode/4.submit-transaction-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/5.transaction-management-of-mysql-mode/4.submit-transaction-of-mysql-mode.md
@@ -122,6 +122,6 @@ obclient [test]> SELECT * FROM ordr;
 5 rows in set
 ```
 
-## Related topics
+## More information
 
 * [Start a transaction](2.start-a-transaction-of-mysql-mode.md)
