--- a/en-US/3.develop/1.application-development-of-mysql-mode/5.transaction-management-of-mysql-mode/5.roll-back-transactions-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/5.transaction-management-of-mysql-mode/5.roll-back-transactions-of-mysql-mode.md
@@ -104,7 +104,7 @@ ROLLBACK TO SAVEPOINT pointname;
 
 For more information about how to roll back a transaction to a savepoint, see [Roll back a transaction to a savepoint](3.transaction-savepoints-of-mysql-mode/2.rollback-to-a-savepoint-of-mysql-mode.md). 
 
-## Related topics
+## More information
 
 * [Commit a transaction](4.submit-transaction-of-mysql-mode.md)
 
