--- a/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/2.connect-to-an-oceanbase-tenant-by-using-obclient-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/2.connect-to-an-oceanbase-tenant-by-using-obclient-of-oracle-mode.md
@@ -120,6 +120,6 @@ obclient> exit
 Bye
 ```
 
-## Related topics
+## More information
 
 For information about how to connect to a MySQL tenant of OceanBase Database by using OBClient, see [Connect to an OceanBase Database tenant by using OBClient](../../1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/3.connect-to-an-oceanbase-tenant-by-using-obclient-of-mysql-mode.md). 
