--- a/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/3.connect-to-the-oceanbase-database-through-odc-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/3.connect-to-the-oceanbase-database-through-odc-of-oracle-mode.md
@@ -43,6 +43,6 @@ This topic takes the example of creating a private connection for a user tenant 
     <p>Before you save the configuration, you can click <b>Test Connection</b> to test the database connection. If the database username and password are correct, the system returns a message indicating that the connection succeeded.</p>
    </main>
 
-## Related topics
+## More information
 
 For more information about other features of ODC, see the [ODC documentation](https://en.oceanbase.com/docs/enterprise-odc-doc-en-10000000000841686) in the [OceanBase Database documentation center](https://en.oceanbase.com/docs/enterprise-oceanbase-database-en-10000000000829108). 
