--- a/en-US/3.develop/2.application-development-of-oracle-mode/2.design-a-database-object-of-oracle-mode/3.create-a-index-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/2.design-a-database-object-of-oracle-mode/3.create-a-index-of-oracle-mode.md
@@ -219,7 +219,7 @@ obclient [SYS]> CREATE UNIQUE INDEX tbl2_f_rl_idx1 ON tbl2_f_rl(col1) GLOBAL;
 Query OK, 0 rows affected
 ```
 
-## Related topics
+## More information
 
 * [View indexes](../../../7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/3.manage-indexes-of-oracle-mode/3.view-indexes-of-oracle-mode.md)
 
