--- a/en-US/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/1.insert-data-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/1.insert-data-of-oracle-mode.md
@@ -192,7 +192,7 @@ obclient> SELECT * FROM t1@ob_dblink;
 2 rows in set
 ```
 
-## Related topics
+## More information
 
 * [Update data](2.update-data-of-oracle-mode.md)
 
