--- a/en-US/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/2.update-data-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/2.update-data-of-oracle-mode.md
@@ -163,7 +163,7 @@ obclient> SELECT * FROM t2@ob_dblink;
 1 rows in set
 ```
 
-## Related topics
+## More information
 
 * [Insert data](1.insert-data-of-oracle-mode.md)
 
