--- a/en-US/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/4.replace-data-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/4.replace-data-of-oracle-mode.md
@@ -227,7 +227,7 @@ obclient> SELECT * FROM t3@orcl_dblink;
 4 row in set
 ```
 
-## Related topics
+## More information
 
 * [Insert data](1.insert-data-of-oracle-mode.md)
 
