--- a/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/7.multi-table-join-query-of-oracle-mode/1.inner-join-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/7.multi-table-join-query-of-oracle-mode/1.inner-join-of-oracle-mode.md
@@ -184,7 +184,7 @@ Based on the tables and data created in the preceding examples, query data with 
    2 rows in set
    ```
 
-## Related topics
+## More information
 
 * [FULL JOIN queries](2.full-join-of-oracle-mode.md)
 
