--- a/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/7.multi-table-join-query-of-oracle-mode/2.full-join-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/7.multi-table-join-query-of-oracle-mode/2.full-join-of-oracle-mode.md
@@ -124,7 +124,7 @@ obclient [SYS]> SELECT * FROM tbl_a FULL JOIN tbl_b ON tbl_a.id=tbl_b.num WHERE 
 1 row in set
 ```
 
-## Related topics
+## More information
 
 * [INNER JOIN queries](1.inner-join-of-oracle-mode.md)
 
