--- a/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/7.multi-table-join-query-of-oracle-mode/4.right-join-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/7.multi-table-join-query-of-oracle-mode/4.right-join-of-oracle-mode.md
@@ -105,7 +105,7 @@ obclient> SELECT t1.id, t1.name, t2.id, t2.name FROM t1
 6 rows in set
 ```
 
-## Related topics
+## More information
 
 * [INNER JOIN queries](1.inner-join-of-oracle-mode.md)
 
