--- a/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/7.multi-table-join-query-of-oracle-mode/5.subquery-of-oracle-mode-develop.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/7.multi-table-join-query-of-oracle-mode/5.subquery-of-oracle-mode-develop.md
@@ -299,7 +299,7 @@ obclient [USER001]> SELECT * FROM tbl1,TABLE(CAST(MULTISET(SELECT tbl2.col2 FROM
 2 rows in set
 ```
 
-## Related topics
+## More information
 
 * [SELECT](../../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/5.select-of-oracle-mode/1.simple-select-of-oracle-mode.md)
 * [CAST](../../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/2.single-row-functions-of-oracle-mode/6.conversion-functions-of-oracle-mode/2.cast-of-oracle-mode.md)
