--- a/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/9.execution-plan-of-oracle-mode/2.understand-the-execution-plan-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/9.execution-plan-of-oracle-mode/2.understand-the-execution-plan-of-oracle-mode.md
@@ -361,6 +361,6 @@ In the preceding sample code, the `outputs & filters` section in the execution p
 | equal_conds | The equivalent join. The JOIN columns on the left and right sides are used to calculate the hash value.  |
 | other_conds | Other JOIN conditions. For example, in Example 6, the query has an additional join condition: `tnlj1.c2 + tnlj2.d2 > 1`.  |
 
-## Related topic
+## More information
 
 [Overview of SQL tuning](../../../../7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/1.overview-of-sql-optimization.md)
