--- a/en-US/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/4.submit-transaction-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/4.submit-transaction-of-oracle-mode.md
@@ -123,6 +123,6 @@ obclient [SYS]> SELECT * FROM ordr;
 4 rows in set
 ```
 
-## Related topic
+## More information
 
 * [Start a transaction](2.start-a-transaction-of-oracle-mode.md)
