--- a/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/3.manage-obproxy/4.stop-obproxy.md
+++ b/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/3.manage-obproxy/4.stop-obproxy.md
@@ -31,6 +31,6 @@ After you deploy an ODP, the obproxy process is started by default. You can run 
    root      85623      1  0 Jun02 ?        00:15:19 /home/admin/ocp_agent/obagent/obstat2 -o http://xx.xx.xx.xx:81 -c test323 __obproxy__ -f 20
    ```
 
-## Related topics
+## More information
 
 * [Start an ODP](2.start-obproxy.md)
