--- a/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/3.manage-obproxy/6.delete-obproxy.md
+++ b/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/3.manage-obproxy/6.delete-obproxy.md
@@ -26,6 +26,6 @@ No service is running on the ODP.
 
 5. In the dialog box that appears, click **Delete**.
 
-## Related topics
+## More information
 
 For more information about how to delete an ODP cluster, see [Delete an ODP cluster](../2.manage-obproxy-clusters/3.delete-obproxy-cluster.md).
