--- a/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/3.manage-obproxy/7.upgrade-obproxy.md
+++ b/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/3.manage-obproxy/7.upgrade-obproxy.md
@@ -46,6 +46,6 @@ You have logged on to the OCP console and are granted permissions on the ODP tha
 
    <!-- ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/6695081461/p352532.png) -->
 
-## Related topics
+## More information
 
 For more information about how to upgrade all ODPs in an ODP cluster, see [Upgrade all ODPs in an ODP cluster](../2.manage-obproxy-clusters/4.upgrade-all-obproxy-in-obproxy-cluster.md).
