--- a/en-US/3.develop/1.application-development-of-mysql-mode/5.transaction-management-of-mysql-mode/2.start-a-transaction-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/5.transaction-management-of-mysql-mode/2.start-a-transaction-of-mysql-mode.md
@@ -105,7 +105,7 @@ FLUSHED_LOG_SIZE: 0
 
 For more information about fields in the `oceanbase.$OB_TRANSACTION_PARTICIPANTS` view, see [oceanbase.$OB_TRANSACTION_PARTICIPANTS](../../../7.reference/5.system-reference/4.system-overview-of-mysql-mode/3.performance-view-of-mysql-mode/54.v-ob_transaction_participants-of-mysql-mode.md). 
 
-## Related topics
+## More information
 
 * [Mark a savepoint](3.transaction-savepoints-of-mysql-mode/1.mark-a-savepoint-of-mysql-mode.md)
 
