--- a/en-US/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/3.delete-data-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/3.delete-data-of-oracle-mode.md
@@ -139,7 +139,7 @@ obclient> SELECT * FROM t5@orcl_dblink;
 1 row in set
 ```
 
-## Related topics
+## More information
 
 * [Insert data](1.insert-data-of-oracle-mode.md)
 
