--- a/en-US/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/1.transaction-management-overview-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/1.transaction-management-overview-of-oracle-mode.md
@@ -37,7 +37,7 @@ In the CLI environment of OceanBase Client (OBClient), you can run a transaction
     <p>If the <code>autocommit</code> variable of a session is set to <code>0</code> and no transaction is to be explicitly committed, when the program terminates abnormally, OceanBase Database automatically rolls back the last uncommitted transaction.</p>
   </main>
 
-## Related topics
+## More information
 
 * [Start a transaction](2.start-a-transaction-of-oracle-mode.md)
 
