--- a/en-US/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/2.start-a-transaction-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/2.start-a-transaction-of-oracle-mode.md
@@ -110,7 +110,7 @@ FLUSHED_LOG_SIZE: 0
 
 For more information about fields in the `$OB_TRANSACTION_PARTICIPANTS` view, see [$OB_TRANSACTION_PARTICIPANTS](../../../7.reference/5.system-reference/5.system-overview-of-oracle-mode/3.performance-view-of-oracle-mode/49.v-ob_transaction_participants-of-oracle-mode.md). 
 
-## Related topics
+## More information
 
 * [Mark a savepoint](3.transaction-savepoints-of-oracle-mode/1.mark-a-savepoint-of-oracle-mode.md)
 
