--- a/en-US/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/5.roll-back-transactions-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/5.roll-back-transactions-of-oracle-mode.md
@@ -96,7 +96,7 @@ ROLLBACK TO SAVEPOINT pointname;
 
 For more information about how to roll back a transaction to a savepoint, see [Roll back a transaction to a savepoint](3.transaction-savepoints-of-oracle-mode/2.rollback-to-a-savepoint-of-oracle-mode.md). 
 
-## Related topics
+## More information
 
 * [Commit a transaction](4.submit-transaction-of-oracle-mode.md)
 
