--- a/en-US/2.quickstart/3.create-sample-application-of-oracle-mode/2.java-application-of-oracle-model.md
+++ b/en-US/2.quickstart/3.create-sample-application-of-oracle-mode/2.java-application-of-oracle-model.md
@@ -13,7 +13,9 @@ This topic describes how to build a Java application with OceanBase Database and
 
 * You have installed or upgraded to JDK 8 on your computer.
 
-* You have obtained the installation package of OceanBase Connector/J. <!-- In OceanBase Download Center, choose **Resources > Download > OceanBase Database > Drivers and Middleware**. In the [OceanBase Connector/J](https://www.oceanbase.com/softwarecenter-enterprise) section, click the desired version and enter related information to download the installation package of OceanBase Connector/J. -->
+* You have obtained the installation package of OceanBase Connector/J. 
+  
+  <!-- In OceanBase Download Center, choose **Resources > Download > OceanBase Database > Drivers and Middleware**. In the [OceanBase Connector/J](https://www.oceanbase.com/softwarecenter-enterprise) section, click the desired version and enter related information to download the installation package of OceanBase Connector/J. -->
 
 ## Procedure
 
