--- a/en-US/2.quickstart/3.create-sample-application-of-oracle-mode/3.c-application-of-oracle-model.md
+++ b/en-US/2.quickstart/3.create-sample-application-of-oracle-mode/3.c-application-of-oracle-model.md
@@ -211,7 +211,7 @@ int main(int argc, char *argv[])
   /*Set the server name, username, and password.*/
   strcpy(strServerName, "172.30.xx.xx:2881");
   strcpy(strUserName, "s**@oracle");
-  strcpy(strPassword, "**1***");
+  strcpy(strPassword, "******");
   /*Initialize the OCI application environment.*/
   OCIInitialize(OCI_DEFAULT, NULL, NULL, NULL, NULL);
   /*Initialize the environment handle.*/
@@ -327,7 +327,7 @@ Modify the database connection parameters in the code. Values of the parameters 
 ```c
 strcpy(strServerName, "172.30.xx.xx:2881");
 strcpy(strUserName, "s**@oracle");
-strcpy(strPassword, "***1**");
+strcpy(strPassword, "******");
 ```
 
 * **strServerName**: The value of this parameter is obtained from the `-h` and `-P` parameters, in the format of `IP:port`. This parameter specifies the IP address and port for connecting to OceanBase Database, which are usually the IP address of an ODP and the port for database access.
