--- a/en-US/2.quickstart/3.create-sample-application-of-oracle-mode/1.python-application-of-oracle-model.md
+++ b/en-US/2.quickstart/3.create-sample-application-of-oracle-mode/1.python-application-of-oracle-model.md
@@ -15,7 +15,9 @@ This topic describes how to build a Python application with OceanBase Database a
 
 * The Python environment on your computer is version 3.6.8.
 
-* You have obtained the installation package of OceanBase Connector/J. <!-- In OceanBase Download Center, choose **Resources > Download > OceanBase Database > Drivers and Middleware**. In the [OceanBase Connector/J](https://www.oceanbase.com/softwarecenter-enterprise) section, click the desired version and enter related information to download the installation package of OceanBase Connector/J. -->
+* You have obtained the installation package of OceanBase Connector/J. 
+  
+  <!-- In OceanBase Download Center, choose **Resources > Download > OceanBase Database > Drivers and Middleware**. In the [OceanBase Connector/J](https://www.oceanbase.com/softwarecenter-enterprise) section, click the desired version and enter related information to download the installation package of OceanBase Connector/J. -->
 
 ## Procedure
 
