--- a/zh-CN/7.reference/1.oceanbase-database-concepts/10.high-data-reliability-and-availability/5.backup-and-recovery/4.recovery-architecture.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/10.high-data-reliability-and-availability/5.backup-and-recovery/4.recovery-architecture.md
@@ -4,7 +4,7 @@
 
 ## 恢复概述
 
-OceanBase 数据库提供了租户级别的恢复能力，支持 “完全恢复” 和 “指定 SCN 或者时间戳的不完全恢复”。其中，SCN 是 OceanBase 数据库内部精确的版本号；时间戳在 Oracle 模式下精确到纳秒，没有进度丢失；时间戳在 MySQL 模式下精确到微秒，会丢失微秒之后的精度。
+OceanBase 数据库提供了租户级别的恢复能力，支持 “完全恢复” 和 “指定 SCN 或者时间戳的不完全恢复”。其中，SCN 是 OceanBase 数据库内部精确的版本号；时间戳在 Oracle 模式下精确到纳秒，没有精度丢失；时间戳在 MySQL 模式下精确到微秒，会丢失微秒之后的精度。
 
 租户恢复保证了跨表、跨分区的全局一致性。
 
